--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -76,7 +76,7 @@
     <div class='input-birth-wrap'>
       <%= raw sprintf(
                   f.date_select(
-                    :birth_date,
+                    :date_of_birth,
                     class:'select-birth',
                     id:"birth-date",
                     use_month_numbers: true,
